# quantalang

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DESIGN.md  LICENSE  README.md  ROADMAP.md  ROADMAP_2026_2027.md  ROADMAP_2027_2028.md  ROADMAP_GRAPHICS.md  ROADMAP_VISION.md  SELF_HOSTING_PROGRESS.md  SPECIFICATION.md  STATUS.md  TEST_RESULTS.md  build_test.bat  claude-mastery-project.conf  msvc_test.bat  test_msvc_all.bat
compiler/: Cargo.toml
compiler/benches/: lexer_benchmark.rs
compiler/examples/: gen_triangle.rs
compiler/src/: lib.rs  main.rs
compiler/src/ast/: expr.rs  item.rs  mod.rs  operators.rs  pattern.rs  stmt.rs  ty.rs
compiler/src/codegen/: builder.rs  debug.rs  ir.rs  lower.rs  mod.rs  runtime.rs
compiler/src/codegen/backend/: STATUS.md  arm64.rs  arm64_enc.rs  c.rs  glsl.rs  (+7 more)
compiler/src/fmt/: config.rs  formatter.rs  mod.rs  pretty.rs
compiler/src/lexer/: cursor.rs  error.rs  mod.rs  scanner.rs  span.rs  token.rs
compiler/src/lsp/: STATUS.md  actions.rs  completion.rs  definition.rs  diagnostics.rs  document.rs  hover.rs  message.rs  mod.rs  server.rs  symbols.rs  transport.rs  types.rs
compiler/src/macro_expand/: builtins.rs  expand.rs  hygiene.rs  mod.rs  pattern.rs
compiler/src/parser/: error.rs  expr.rs  item.rs  mod.rs  pattern.rs  stmt.rs  ty.rs
compiler/src/pkg/: lockfile.rs  manifest.rs  mod.rs  registry.rs  resolver.rs  version.rs
compiler/src/runtime/: STATUS.md  async_rt.rs  ffi.rs  gc.rs  mod.rs
compiler/src/types/: builtins.rs  check.rs  const_generics.rs  context.rs  effects.rs  error.rs  hkt.rs  infer.rs  mod.rs  traits.rs  ty.rs  unify.rs
compiler/tests/lexer/: mod.rs
compiler/tests/parser/: mod.rs
(+1003 files in other folders)
